--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                       </tr>
                       <tr>
                         <td colspan="2" style="text-align:center; line-height: 1.5em;">
-                          <a href="https://commons.wikimedia.org/wiki/File:Secretary_duncan.jpg?uselang=fr" class="image">
+                          <a href=# class="image">
                             <img alt="Illustration." src="assets/PhotoUM.jpg" decoding="async" srcset="assets/photoUM.jpg" data-file-width="455" data-file-height="581" width="220" height="281">
                           </a>
                         </td>
