--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     </tbody>
                   </table>
                   <p>
-                    <b>Mattias Uroz</b>, né le 5 février 2004 à Nice (<a href="https://fr.wikipedia.org/wiki/France" title="France">France</a>) est un Étudiant de l'<a href="https://univ-cotedazur.fr/" title="Université Nice Côte d'Azur">Université Nice Côte d'Azur</a>, où il y prépare un BUT Réseaux et Télécommunications. Diplômé d'un Baccalauréat Général avec les spécialités Mathématiques et Numérique et Sciences de l'Informatique, A FINIR.
+                    <b>Mattias Uroz</b>, né le 5 février 2004 à Nice (<a href="https://fr.wikipedia.org/wiki/France" title="France">France</a>) est un Étudiant de l'<a href="https://univ-cotedazur.fr/" title="Université Nice Côte d'Azur">Université Nice Côte d'Azur</a>, où il y prépare un BUT Réseaux et Télécommunications. Diplômé d'un Baccalauréat Général avec les spécialités Mathématiques et Numérique et Sciences de l'Informatique.
                   </p>
                   <h2>
                     <span class="mw-headline" id="Biographie">Biographie</span>
