--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Mattias Uroz — Wikipédia</title>
     <link rel="stylesheet" href="assets/load.css">
+    <link rel="stylesheet" href="assets/es.css">
+    <link rel="stylesheet" href="assets/es2.css">
     <meta name="referrer" content="origin">
     <meta name="referrer" content="origin-when-crossorigin">
     <meta name="referrer" content="origin-when-cross-origin">
@@ -53,7 +55,8 @@
 
         <div class="mw-table-of-contents-container mw-ui-icon-flush-left">
 			<div class="vector-sticky-toc-container">
-				<nav id="mw-panel-toc" class="sidebar-toc" role="navigation" aria-labelledby="sidebar-toc-label" data-event-name="ui.sidebar-toc">
+        
+				<nav id="mw-panel-toc" class="sidebar-toc" aria-labelledby="sidebar-toc-label" data-event-name="ui.sidebar-toc">
 			<div id="sidebar-toc-label" class="sidebar-toc-header">
 				<p class="sidebar-toc-title">Sommaire</p>
 			</div>
@@ -73,7 +76,6 @@
 
       <button aria-controls="toc-Biographie-sublist" class="mw-ui-icon mw-ui-icon-wikimedia-expand mw-ui-icon-small sidebar-toc-toggle"></button>
 
-			<ul id="toc-Biographie-sublist" class="sidebar-toc-list">
 				<li id="toc-Diplomes"
 			class="sidebar-toc-list-item sidebar-toc-level-2">
 			<a class="sidebar-toc-link" href="#Diplomes">
@@ -94,20 +96,30 @@
 			<ul id="toc-Experiences_Professionnelles-sublist" class="sidebar-toc-list">
 			</ul>
 		</li>
-
-  </li>
   <li id="toc-Passions-Competences"
-    class="sidebar-toc-list-item sidebar-toc-level-2">
-    <a class="sidebar-toc-link" href="#Passions-Competences">
+  class="sidebar-toc-list-item sidebar-toc-level-2">
+  <a class="sidebar-toc-link" href="#Passions-Competences">
       <div class="sidebar-toc-text">
-      <span class="sidebar-toc-numb">1.2</span>Passions / Competences</div>
+      <span class="sidebar-toc-numb">1.3</span>Passions / Competences</div>
     </a>
 
     <ul id="toc-Passions_Competences-sublist" class="sidebar-toc-list">
     </ul>
   </li>
-	</ul>
-		</li>
+  <li id="toc-Portfolio"
+  class="sidebar-toc-list-item sidebar-toc-level-1">
+  <a class="sidebar-toc-link" href="#Portfolio">
+    <div class="sidebar-toc-text">
+    <span class="sidebar-toc-numb">2</span>Portfolio</div>
+  </a>
+</li>
+<li id="toc-Thales"
+class="sidebar-toc-list-item sidebar-toc-level-2">
+<a class="sidebar-toc-link" href="#Portfolio">
+  <div class="sidebar-toc-text">
+  <span class="sidebar-toc-numb">2.2</span>Projet Thales Alenia Space</div>
+</a>
+</li>
 	</ul>
 		</nav>
 	</div>
@@ -372,10 +384,27 @@
                   <h3>
                     <span class="mw-headline" id="Passions-Competences">Passions / Compétences</span>
                   </h3>
-                  <p>Mattias Uroz est passionné par l'informatique depuis son plus jeune âge, il aime savoir comment les ordinateurs fonctionnent. Il aime énormément contribuer à des projets <a href="https://fr.wikipedia.org/wiki/Open_source">Open-Source</a>, afin de les voir évoluer.</p>
-                  <p>Il a appris à programmer en <a href="https://fr.wikipedia.org/wiki/Python_(langage)">Python</a>, il dispose d'un niveau avancé. Mattias a un niveau intermédiaire dans la suite Office ainsi que dans la suite <a href="https://fr.wikipedia.org/wiki/Adobe_(entreprise)">Adobe</a>, <br>
-                    Il sait aussi créer des sites web grâce au langage <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language">HTML</a> et <a href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade">CSS</a>. Il manipule bien <a href="https://fr.wikipedia.org/wiki/Figma">Figma</a>, ce qu'il lui permet de modéliser des maquettes de site web.</p>
-
+                  <p>
+                    Mattias Uroz, s'est toujours intéressé à la communauté <a href="https://fr.wikipedia.org/wiki/Open_source">Open-Source</a>, il a passé beaucoup de temps à participer à des projets, afin d'observer leur progression.
+                  </p>
+                  <p>
+                    Passionné par l'informatique, il a acquis une maîtrise du langage <a href="https://fr.wikipedia.org/wiki/Python_(langage)">Python</a>, lui permettant d'aborder des problèmes complexes avec facilité. Il possède également des compétences intermédiaires dans l'utilisation des suites Office et <a href="https://fr.wikipedia.org/wiki/Adobe_(entreprise)">Adobe</a>, ce qui lui permet de travailler efficacement sur des tâches liées à la création de documents et à la manipulation d'éléments graphiques.
+                  </p>
+                  <p>Il sait aussi créer des sites web grâce au langage <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language">HTML</a> et <a href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade">CSS</a>. Il manipule bien <a href="https://fr.wikipedia.org/wiki/Figma">Figma</a>, ce qu'il lui permet de modéliser des maquettes de site web.</p>
+                  <p>
+                    Au cours de sa formation, il a appris la conception, la configuration et la sécurisation des réseaux informatiques.
+                  </p>
+                  
+                  <h2>
+                    <span class="mw-headline" id="Portfolio">Portfolio</span>
+                  </h2>
+                  <div class="thumb tleft">
+                    <div class="thumbinner" style="width:222px;">
+                      <img src="assets/space.jpg" alt="Image d'illustration d'un satellite">
+                      <div class="thumbcaption">Projet Sniffer Ethernet en colaboration avec <a href="https://fr.wikipedia.org/wiki/Thales_Alenia_Space">Thales Alenia Space</a></div>
+                    </div>
+                  </div>
+                  <p>Le but du projet Sniffer Ethernet de Thales Alenia Space était de créer un programme Python capable de déchiffrer des fichiers de trame réseau binaires. Le but de ce programme était d'obtenir des données importantes des trames, telles que les données ARP, les adresses IP et MAC, afin de les transférer à une base de données pour un traitement ultérieur. Cette méthode a permis d'analyser et d'utiliser les données réseau recueillies de manière plus efficace et précise.</p>
 
                   <ul id="bandeau-portail" class="bandeau-portail">
                     <li>
