--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                             </a>
                           </li>
                           <li id="ca-history" class="vector-tab-noicon mw-list-item">
-                            <a href="MyPdf.pdf" title="Télécarger le CV [Alt + Shift + P]" accesskey="p">
+                            <a href="CV_Mattias_Uroz.pdf" title="Télécarger le CV" accesskey="p">
                               <span>Télécharger le CV</span>
                             </a>
                           </li>
@@ -398,13 +398,45 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                   <h2>
                     <span class="mw-headline" id="Portfolio">Portfolio</span>
                   </h2>
+                  <h3>
+                    <span class="mw-headline" id="Sniffer-Ethernet">Sniffer Ethernet - Thales Alenia Space</span>
+                  </h3>
                   <div class="thumb tleft">
                     <div class="thumbinner" style="width:222px;">
                       <img src="assets/space.jpg" alt="Image d'illustration d'un satellite">
                       <div class="thumbcaption">Projet Sniffer Ethernet en colaboration avec <a href="https://fr.wikipedia.org/wiki/Thales_Alenia_Space">Thales Alenia Space</a></div>
                     </div>
                   </div>
-                  <p>Le but du projet Sniffer Ethernet de Thales Alenia Space était de créer un programme Python capable de déchiffrer des fichiers de trame réseau binaires. Le but de ce programme était d'obtenir des données importantes des trames, telles que les données ARP, les adresses IP et MAC, afin de les transférer à une base de données pour un traitement ultérieur. Cette méthode a permis d'analyser et d'utiliser les données réseau recueillies de manière plus efficace et précise.</p>
+                  <p>Le projet Sniffer Ethernet de <a href="https://fr.wikipedia.org/wiki/Thales_Alenia_Space">Thales Alenia Space</a> visait à développer un programme <a href="https://fr.wikipedia.org/wiki/Python_(langage)">Python</a> capable de déchiffrer des fichiers de trame réseau binaires.Le but de ce programme est d'obtenir des données de trame importantes, telles que les données ARP, les <a href="https://fr.wikipedia.org/wiki/Adresse_IP">adresses IP</a> et MAC, pour les transférer à une base de données pour un traitement ultérieur. Les données réseau recueillies ont été analysées et utilisées de manière plus efficace et précise grâce à cette technique.</p>
+                  <p>Une fois que les données ont été extraites, elles sont transférées vers une base de données centralisée spécialement conçue pour le projet. Elle fournit une plateforme robuste et sécurisée pour le stockage, la gestion et l'analyse des données réseau. Il est plus facile d'organiser, de rechercher et d'utiliser efficacement les données pour des applications telles que la surveillance du réseau, l'optimisation des performances et la détection d'anomalies.</p>
+                  <p>Un interface Web dédié permet de faciliter l'accès et la visualisation des données. De plus, elle offre des fonctionnalités pour supprimer les données indésirables ou obsolètes, garantissant la propreté et la pertinence des informations stockées.</p>
+
+                  <h3>
+                    <span class="mw-headline" id="Reseau-Infra">Contruire un réseau pour une petite infrastructure</span>
+                  </h3>
+                  <div class="thumb tright">
+                    <div class="thumbinner" style="width:222px;">
+                      <img src="assets/ciscopt.png" alt="Simulation d'un réseau sur packet tracer">
+                      <div class="thumbcaption">Mise en situation de la création d'un réseau d'entreprise</a></div>
+                    </div>
+                  </div>
+                  <p>Le projet consistait à simuler un réseau d'entreprise en utilisant Cisco Packet Tracer. Trois VLANs ont été créés pour séparer les départements, renforçant ainsi la sécurité et la confidentialité des données. Un pare-feu a été installé pour protéger le réseau des attaques externes, tandis qu'une DMZ a été mise en place pour héberger des services accessibles depuis Internet.</p>
+                  <p>Grâce à Cisco Packet Tracer, une plateforme de simulation réseau, l'infrastructure a été conçue de manière pratique et réaliste. Les VLANs ont permis la segmentation du réseau en sous-réseaux virtuels, assurant l'isolation du trafic entre les départements. Le pare-feu a filtré le trafic réseau et appliqué des règles de sécurité pour prévenir les accès non autorisés et les attaques. La DMZ a fourni une zone intermédiaire pour les services accessibles depuis Internet, avec des règles de sécurité spécifiques.</p>
+                  <p>Ce projet a permis d'acquérir des compétences en conception et configuration de réseaux d'entreprise, mettant en avant la sécurité des systèmes d'information. La simulation réalisée avec succès a démontré l'importance des VLANs, du pare-feu et de la DMZ dans la protection et la séparation des réseaux au sein d'une entreprise.</p>
+
+                  <h3>
+                    <span class="mw-headline" id="AI4YOUTH">Intelligence artificielle pour la reconnaissance du langage des signes</span>
+                  </h3>
+                  <div class="thumb tleft">
+                    <div class="thumbinner" style="width:222px;">
+                      <img src="assets/intel.png" alt="Logo Intel">
+                      <div class="thumbcaption">Projet AI4YOUTH en collaboration avec Intel</div>
+                    </div>
+                  </div>
+                  <p>Lors du programme AI4YOUTH organisé par Intel, nous avons eu l'opportunité de créer une idée novatrice centrée sur la problématique "Comment simplifier la vie quotidienne avec l'IA". 
+                    Avec mon équipe, nous avons décidé de simplifier la vie des personnes sourdes et muettes, qui communiquent grâce à la langue des signes. 
+                    Cependant, de nombreuses personnes ne comprennent pas cette langue, ce qui peut entraver la communication. Pour résoudre ce problème, nous avons développé une intelligence artificielle qui traduit la langue des signes en toutes les langues. 
+                    Pour cela, nous avons utilisé la bibliothèque OpenCV sur un script Python. La traduction s'effectue en temps réel via une caméra, rendant l'utilisation très simple.</p>
 
                   <ul id="bandeau-portail" class="bandeau-portail">
                     <li>
@@ -422,7 +454,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                     <li>
                       <span class="bandeau-portail-element">
                         <span class="bandeau-portail-icone">
-                          <a href="mailto:mattias.urz@gmail.com" title="E-Mail">
+                          <a href="mailto:mattias.uroz@proton.me" title="E-Mail">
                             <img alt="icône E-Mail" src="assets/mail.svg" srcset="assets/mail.svg" data-file-width="512" data-file-height="512" width="20" height="20">
                           </a>
                         </span>
