--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                             </a>
                           </li>
                           <li id="ca-history" class="vector-tab-noicon mw-list-item">
-                            <a href="assets/CV_Mattias_UROZ.pdf" title="Télécarger le CV" accesskey="p">
+                            <a href="assets/CV_Mattias_UROZ.pdf" title="Télécarger le CV" accesskey="p" download>
                               <span>Télécharger le CV</span>
                             </a>
                           </li>
