--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                     </tbody>
                   </table>
                   <p>
-                    <b>Mattias Uroz</b>, né le 5 février 2004 à Nice (<a href="https://fr.wikipedia.org/wiki/France" title="France">France</a>), est un étudiant de l'<a href="https://univ-cotedazur.fr/" title="Université Nice Côte d'Azur">Université Nice Côte d'Azur</a>, engagé dans la préparation d'un BUT en Réseaux et Télécommunications. Il est également actuellement alternant à l'Aéroport Nice Côte d'Azur, où il acquiert une expérience professionnelle précieuse dans le domaine. Diplômé d'un Baccalauréat Général avec des spécialités en Mathématiques et en Sciences de l'Informatique, Mattias démontre un vif intérêt pour les domaines technologiques et numériques
+                    <b>Mattias Uroz</b>, né le 5 février 2004 à Nice (<a href="https://fr.wikipedia.org/wiki/France" title="France">France</a>), est un étudiant de l'<a href="https://univ-cotedazur.fr/" title="Université Nice Côte d'Azur">Université Nice Côte d'Azur</a>, engagé dans la préparation d'un BUT en Réseaux et Télécommunications. Il est également actuellement alternant à l'Aéroport Nice Côte d'Azur, où il acquiert une expérience professionnelle précieuse dans le domaine. Mattias démontre un vif intérêt pour les domaines technologiques et numériques
                   </p>
                   <h2>
                     <span class="mw-headline" id="Biographie">Biographie</span>
