--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
     <meta name="referrer" content="origin-when-cross-origin">
     <meta name="robots" content="max-image-preview:standard">
     <meta name="format-detection" content="telephone=no">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="1532">
-    <meta property="og:image:width" content="800">
-    <meta property="og:image:height" content="1022">
-    <meta property="og:image:width" content="640">
-    <meta property="og:image:height" content="817">
     <meta name="viewport" content="width=1000">
     <meta property="og:title" content="Mattias Uroz — Wikipédia">
     <meta property="og:type" content="website">
@@ -384,7 +378,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                     </tbody>
                   </table>
                   <p>
-                    <b>Mattias Uroz</b>, né le 5 février 2004 à Nice (<a href="https://fr.wikipedia.org/wiki/France" title="France">France</a>), est un étudiant de l'<a href="https://univ-cotedazur.fr/" title="Université Nice Côte d'Azur">Université Nice Côte d'Azur</a>, engagé dans la préparation d'un BUT en Réseaux et Télécommunications. Il est également actuellement alternant à l'Aéroport Nice Côte d'Azur, où il acquiert une expérience professionnelle précieuse dans le domaine. Mattias démontre un vif intérêt pour les domaines technologiques et numériques
+                    <b>Mattias Uroz</b>, né le 5 février 2004 à Nice (<a href="https://fr.wikipedia.org/wiki/France" title="France">France</a>), est un étudiant de l'<a href="https://univ-cotedazur.fr/" title="Université Nice Côte d'Azur">Université Nice Côte d'Azur</a>, engagé dans la préparation d'un BUT en Réseaux et Télécommunications. Il est également actuellement alternant à l'<a href="https://fr.wikipedia.org/wiki/A%C3%A9roport_de_Nice-C%C3%B4te_d%27Azur">Aéroport Nice Côte d'Azur</a>, où il acquiert une expérience professionnelle précieuse dans le domaine. Mattias démontre un vif intérêt pour les domaines technologiques et numériques
                   </p>
                   <h2>
                     <span class="mw-headline" id="Biographie">Biographie</span>
