--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                             </a>
                           </li>
                           <li id="ca-history" class="vector-tab-noicon mw-list-item">
-                            <a href="assets/CV_Mattias_UROZ.pdf" title="Télécharger le CV" data-hotkey="p" download>
+                            <a href="assets/CV_Mattias_UROZ.pdf" title="Télécharger le CV" data-hotkey="Ctrl+p" download>
                               <span>Télécharger le CV</span>
                             </a>
                           </li>
