--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                             </a>
                           </li>
                           <li id="ca-history" class="vector-tab-noicon mw-list-item">
-                            <a href="assets/CV_Mattias_UROZ.pdf" title="Télécharger le CV" data-hotkey="Ctrl+p" download>
+                            <!-- lien cliquable quand je fais ctrl + s-->
+                            <a href="assets/CV_Mattias_UROZ.pdf" title="Télécharger le CV" accesskey="p" download>
                               <span>Télécharger le CV</span>
                             </a>
                           </li>
@@ -387,7 +388,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                     <span class="mw-headline" id="Diplomes">Diplômes</span>
                   </h3>
                   <p>Il rentre en octobre 2015 au Collège César, il y obtiendra son <a href = "https://fr.wikipedia.org/wiki/Dipl%C3%B4me_national_du_brevet">Diplôme National du Brevet</a> en Juillet 2019. <br> Parallèlement, il passe son diplôme de Premier Secours, le <a href="https://fr.wikipedia.org/wiki/Pr%C3%A9vention_et_secours_civiques_de_niveau_1">PSC1</a>, 1 an après sa rentrée au collège (Octobre 2016). </p>
-                  <p>À la suite, Mattias rentrera au Lycée Général et Technologique Simone Veil à Valbonne. Il choisira les options Mathématiques, Numérique et Sciences de l'informatique ainsi que Physique-Chimie en première. Il obtiendra son <a href="https://fr.wikipedia.org/wiki/Baccalaur%C3%A9at_en_France">Baccalauréat</a> en Juillet 2022.</p>
+                  <p>Par la suite, Mattias rentrera au Lycée Général et Technologique Simone Veil à Valbonne. Il choisira les options Mathématiques, Numérique et Sciences de l'informatique ainsi que Physique-Chimie en première. Il obtiendra son <a href="https://fr.wikipedia.org/wiki/Baccalaur%C3%A9at_en_France">Baccalauréat</a> en Juillet 2022.</p>
 
                   
                   <h3>
@@ -407,7 +408,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                     Passionné par l'informatique, il a acquis une maîtrise du langage <a href="https://fr.wikipedia.org/wiki/Python_(langage)">Python</a>, lui permettant d'aborder des problèmes complexes avec facilité. Il possède également des compétences intermédiaires dans l'utilisation des suites Office et <a href="https://fr.wikipedia.org/wiki/Adobe_(entreprise)">Adobe</a>, ce qui lui permet de travailler efficacement sur des tâches liées à la création de documents et à la manipulation d'éléments graphiques.
                   </p>
                   <p>
-                    En février 2022, il fit la découverte d'<a href="https://www.openstreetmap.org/">OpenStreetMap</a>, ce qui marqua le début de son engagement actif et régulier dans la cartographie. Son implication grandissante le conduisit finalement à rejoindre l'association en août 2023. Cette expérience lui a offert l'opportunité d'acquérir des compétences approfondies en cartographie, tout en élargissant sa maîtrise de langages de programmation tels que <a href="https://fr.wikipedia.org/wiki/Java_(langage)">Java</a> et Python,
+                    En février 2022, Mattias fait la découverte d'<a href="https://www.openstreetmap.org/user/uMatt-5">OpenStreetMap</a>, ce qui marqua le début de son engagement actif et régulier dans la cartographie. Son implication grandissante le conduisit finalement à rejoindre l'association en août 2023. Cette expérience lui a offert l'opportunité d'acquérir des compétences approfondies en cartographie, tout en élargissant sa maîtrise de langages de programmation tels que <a href="https://fr.wikipedia.org/wiki/Java_(langage)">Java</a> et Python,
                   </p>
                   <p>Il sait aussi créer des sites web grâce au langage <a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language">HTML</a> et <a href="https://fr.wikipedia.org/wiki/Feuilles_de_style_en_cascade">CSS</a>. Il manipule bien <a href="https://fr.wikipedia.org/wiki/Figma">Figma</a>, ce qu'il lui permet de modéliser des maquettes de site web.</p>
                   <p>
