--- a/index.html
+++ b/index.html
@@ -399,6 +399,12 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                   <p>En Juin 2022, Mattias travaillera à <a href="https://fr.wikipedia.org/wiki/Marineland_d%27Antibes#Autres_installations">Aquasplash</a>, où il devra sensibiliser le public à la sécurité des attractions aquatiques et gérer l'accueil des clients. <br>En Août 2022, il occupera la fonction d'animateur à <a href="https://fr.wikipedia.org/wiki/Marineland_d%27Antibes#Autres_installations">Kid's Island</a>, il sera responsable de la sécurité de la clientèle ainsi que de l'animation du parc.</p>
 
                   <h3>
+                    <span class="mw-headline" id="Experiences-Personnelles">Expériences Personnelles</span>
+                  </h3>
+                  <p></p>
+
+
+                  <h3>
                     <span class="mw-headline" id="Passions-Competences">Passions / Compétences</span>
                   </h3>
                   <p>
@@ -442,7 +448,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                   </div>
                   <p>Le but du <a href="assets/SIMULATION_INFRA.pkt">projet</a> était de simuler un réseau commercial avec Cisco Packet Tracer. Trois VLANs ont été créées pour séparer les services, augmentant la sécurité et la confidentialité des données. Un pare-feu a été installé pour protéger le réseau des attaques externes et une <a href="https://fr.wikipedia.org/wiki/Zone_d%C3%A9militaris%C3%A9e_(informatique)">DMZ</a> a été installée pour héberger les services accessibles depuis Internet.</p>
                   <p>Grâce à <a href="https://fr.wikipedia.org/wiki/Packet_Tracer">Cisco Packet Tracer</a>, une plateforme de simulation réseau, l'infrastructure a été conçue de manière pratique et réaliste. Les VLANs ont permis la segmentation du réseau en sous-réseaux virtuels, assurant l'isolation du trafic entre les départements. Le pare-feu a filtré le trafic réseau et appliqué des règles de sécurité pour prévenir les accès non autorisés et les attaques. La DMZ a fourni une zone intermédiaire pour les services accessibles depuis Internet, avec des règles de sécurité spécifiques.</p>
-                  <p>En mettant l'accent sur la sécurité des systèmes d'information, ce projet m'a apporté des compétences en conception et configuration de réseaux d'entreprise. La simulation réussie a montré à quel point les VLANs, les pare-feu et les DMZ sont importants pour la protection et la séparation des réseaux d'une entreprise.</p>
+                  <p>En mettant l'accent sur la sécurité des systèmes d'information, ce projet lui a apporté des compétences en conception et configuration de réseaux d'entreprise. La simulation réussie a montré à quel point les VLANs, les pare-feu et les DMZ sont importants pour la protection et la séparation des réseaux d'une entreprise.</p>
 
                   <h3>
                     <span class="mw-headline" id="AI4YOUTH">Intelligence artificielle pour la reconnaissance du langage des signes</span>
@@ -453,11 +459,10 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                       <div class="thumbcaption">Projet AI4YOUTH en collaboration avec Intel</div>
                     </div>
                   </div>
-                  <p>Lors du programme AI4YOUTH organisé par Intel, nous avons eu l'opportunité de créer une idée novatrice centrée sur la problématique "Comment simplifier la vie quotidienne avec l'IA". 
-                    Avec mon équipe, nous avons décidé de simplifier la vie des personnes sourdes et muettes, qui communiquent grâce à la langue des signes. 
-                    Cependant, de nombreuses personnes ne comprennent pas cette langue, ce qui peut entraver la communication. Pour résoudre ce problème, nous avons développé une intelligence artificielle qui traduit la langue des signes en toutes les langues. 
-                    Pour cela, nous avons utilisé la bibliothèque OpenCV sur un script Python. La traduction s'effectue en temps réel via une caméra, rendant l'utilisation très simple.</p>
-
+                  <p>Lors du programme AI4YOUTH organisé par Intel, il a eu l'opportunité de créer une idée novatrice centrée sur la problématique "Comment simplifier la vie quotidienne avec l'IA". Avec son équipe, 
+                    il a décidé de simplifier la vie des personnes sourdes et muettes, qui communiquent grâce à la langue des signes. Cependant, de nombreuses personnes ne comprennent pas cette langue, ce qui peut entraver la communication. 
+                    Pour résoudre ce problème, il a développé une intelligence artificielle qui traduit la langue des signes en toutes les langues. 
+                    Pour cela, il a utilisé la bibliothèque OpenCV sur un script Python. La traduction s'effectue en temps réel via une caméra, rendant l'utilisation très simple.</p>
                   <ul id="bandeau-portail" class="bandeau-portail">
                     <li>
                       <span class="bandeau-portail-element">
