--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                     </div>
                   </div>
                   <p>Lors du programme AI4YOUTH organisé par Intel, il a eu l'opportunité de créer une idée novatrice centrée sur la problématique "Comment simplifier la vie quotidienne avec l'IA". Avec son équipe, 
-                    il a décidé de simplifier la vie des personnes sourdes et muettes, qui communiquent grâce à la langue des signes. Cependant, de nombreuses personnes ne comprennent pas cette langue, ce qui peut entraver la communication. 
-                    Pour résoudre ce problème, il a développé une intelligence artificielle qui traduit la langue des signes en toutes les langues. 
+                    il a décidé de simplifier la vie des personnes sourdes et muettes, qui communiquent grâce à la langue des signes. Cependant, de nombreuses personnes ne comprennent pas cette langue, ce qui peut entraver la communication. </p>
+                  <p>Pour résoudre ce problème, il a développé une intelligence artificielle qui traduit la langue des signes en toutes les langues. 
                     Pour cela, il a utilisé la bibliothèque OpenCV sur un script Python. La traduction s'effectue en temps réel via une caméra, rendant l'utilisation très simple.</p>
                   <ul id="bandeau-portail" class="bandeau-portail">
                     <li>
