--- a/index.html
+++ b/index.html
@@ -390,6 +390,10 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                   <p>Il rentre en octobre 2015 au Collège César, il y obtiendra son <a href = "https://fr.wikipedia.org/wiki/Dipl%C3%B4me_national_du_brevet">Diplôme National du Brevet</a> en Juillet 2019. <br> Parallèlement, il passe son diplôme de Premier Secours, le <a href="https://fr.wikipedia.org/wiki/Pr%C3%A9vention_et_secours_civiques_de_niveau_1">PSC1</a>, 1 an après sa rentrée au collège (Octobre 2016). </p>
                   <p>Par la suite, Mattias rentrera au Lycée Général et Technologique Simone Veil à Valbonne. Il choisira les options Mathématiques, Numérique et Sciences de l'informatique ainsi que Physique-Chimie en première. Il obtiendra son <a href="https://fr.wikipedia.org/wiki/Baccalaur%C3%A9at_en_France">Baccalauréat</a> en Juillet 2022.</p>
 
+                  <h3>
+                    <span class="mw-headline" id="Certifications">Certifications</span>
+                  </h3>
+                  <p>Pendant ses années universitaires, Mattias a occupé le poste de président du Bureau des Étudiants, une expérience qui lui a offert l'opportunité de développer des compétences essentielles, notamment la gestion d'équipes et de projets, ainsi que l'organisation d'événements de grande envergure. </p>
                   
                   <h3>
                     <span class="mw-headline" id="Experiences-Professionnelles">Expériences Professionnelles</span>
