--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                   <h3>
                     <span class="mw-headline" id="Experiences-Personnelles">Expériences Personnelles</span>
                   </h3>
-                  <p>Pendant ses années universitaires, Mattias a occupé le poste de président du Bureau des Étudiants, une expérience qui lui a offert l'opportunité de développer des compétences essentielles, notamment la gestion d'équipes et de projets, ainsi que l'organisation d'événements de grande envergure. </p>
+                  <p>Pendant ses années universitaires, Mattias a occupé le poste de président du Bureau des Étudiants, une opportunité qui lui a permis d'acquérir des compétences inestimables, notamment la gestion d'équipes et de projets, ainsi que l'organisation d'événements de grande envergure. Cette expérience lui a également permis d'apprendre à administrer une association à but non lucratif.</p>
 
 
                   <h3>
