--- a/index.html
+++ b/index.html
@@ -406,8 +406,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                   <h3>
                     <span class="mw-headline" id="Experiences-Personnelles">Expériences Personnelles</span>
                   </h3>
-                  <p>Pendant ses années universitaires, Mattias a occupé le poste de président du Bureau des Étudiants, une opportunité qui lui a permis d'acquérir des compétences inestimables, notamment la gestion d'équipes et de projets, ainsi que l'organisation d'événements de grande envergure. Cette expérience lui a également permis d'apprendre à administrer une association à but non lucratif.</p>
-
+                  <p>Au cours de ses années universitaires, Mattias a été président du Bureau des Étudiants, une opportunité qui lui a permis d'acquérir des compétences inestimables, notamment en gestion d'équipe et de projet, ainsi qu'en organisation d'événements à grande échelle. Cette expérience lui a également permis d'apprendre à diriger une association à but non lucratif</p>
 
                   <h3>
                     <span class="mw-headline" id="Passions-Competences">Passions / Compétences</span>
