--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                   <h3>
                     <span class="mw-headline" id="Experiences-Personnelles">Expériences Personnelles</span>
                   </h3>
-                  <p>Au cours de ses années universitaires, Mattias a été président du Bureau des Étudiants, une opportunité qui lui a permis d'acquérir des compétences inestimables, notamment en gestion d'équipe et de projet, ainsi qu'en organisation d'événements à grande échelle. Cette expérience lui a également permis d'apprendre à diriger une association à but non lucratif</p>
+                  <p>Au cours de ses années universitaires, Mattias a exercé la fonction de président au sein du Bureau des Étudiants. Cette responsabilité lui a offert une précieuse occasion d'acquérir un ensemble de compétences inestimables, parmi lesquelles la gestion d'équipes et de projets, ainsi que l'organisation d'événements de grande ampleur. De plus, cette expérience lui a permis d'acquérir des compétences en gestion d'associations à but non lucratif.</p>
 
                   <h3>
                     <span class="mw-headline" id="Passions-Competences">Passions / Compétences</span>
