--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <link rel="stylesheet" href="assets/load.css">
     <link rel="stylesheet" href="assets/es.css">
     <link rel="stylesheet" href="assets/es2.css">
-    <meta name="referrer" content="origin">
-    <meta name="referrer" content="origin-when-crossorigin">
-    <meta name="referrer" content="origin-when-cross-origin">
-    <meta name="robots" content="max-image-preview:standard">
-    <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=1000">
     <meta property="og:title" content="Mattias Uroz — Wikipédia">
     <meta property="og:type" content="website">
     <link rel="icon" href="assets/icon.ico">
   </head>
-  <body class="skin-vector skin-vector-search-vue mediawiki ltr sitedir-ltr mw-hide-empty-elt ns-0 ns-subject mw-editable skin-vector-2022 action-view vector-toc-not-collapsed vector-feature-language-in-header-enabled vector-feature-language-in-main-page-header-disabled vector-feature-language-alert-in-sidebar-enabled vector-feature-sticky-header-disabled vector-feature-sticky-header-edit-disabled vector-feature-table-of-contents-legacy-toc-disabled vector-feature-visual-enhancement-next-disabled vector-feature-article-tools-disabled uls-dialog-sticky-hide vector-below-page-title">
+  <body class="skin-vector ltr sitedir-ltr mw-hide-empty-elt ns-0 ns-subject mw-editable skin-vector-2022 action-view vector-toc-not-collapsed vector-feature-language-in-header-enabled vector-feature-language-in-main-page-header-disabled vector-feature-language-alert-in-sidebar-enabled vector-feature-sticky-header-disabled vector-feature-sticky-header-edit-disabled vector-feature-table-of-contents-legacy-toc-disabled vector-feature-visual-enhancement-next-disabled vector-feature-article-tools-disabled">
     <div class="mw-page-container">
       <div class="mw-page-container-inner">
         <input type="checkbox" id="mw-sidebar-checkbox" class="mw-checkbox-hack-checkbox">
@@ -379,7 +374,8 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                     </tbody>
                   </table>
                   <p>
-                    <b>Mattias Uroz</b>, né le 5 février 2004 à Nice (<a href="https://fr.wikipedia.org/wiki/France" title="France">France</a>), est un étudiant de l'<a href="https://univ-cotedazur.fr/" title="Université Nice Côte d'Azur">Université Nice Côte d'Azur</a>, engagé dans la préparation d'un BUT en Réseaux et Télécommunications. Il est également actuellement alternant à l'<a href="https://fr.wikipedia.org/wiki/A%C3%A9roport_de_Nice-C%C3%B4te_d%27Azur">Aéroport Nice Côte d'Azur</a>, où il acquiert une expérience professionnelle précieuse dans le domaine. Mattias démontre un vif intérêt pour les domaines technologiques et numériques
+                    <b>Mattias Uroz</b>, né le 5 février 2004 à Nice (<a href="https://fr.wikipedia.org/wiki/France" title="France">France</a>), est un étudiant de l'<a href="https://univ-cotedazur.fr/" title="Université Nice Côte d'Azur">Université Nice Côte d'Azur</a>, engagé dans la préparation d'un BUT en Réseaux et Télécommunications. 
+                    Il est également actuellement alternant à l'<a href="https://fr.wikipedia.org/wiki/A%C3%A9roport_de_Nice-C%C3%B4te_d%27Azur">Aéroport Nice Côte d'Azur</a>, où il acquiert une expérience professionnelle précieuse dans le domaine. Mattias démontre un vif intérêt pour les domaines technologiques et numériques
                   </p>
                   <h2>
                     <span class="mw-headline" id="Biographie">Biographie</span>
@@ -393,6 +389,8 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                   <h3>
                     <span class="mw-headline" id="Certifications">Certifications</span>
                   </h3>
+                  <p>Mattias a toujours aimer apprendre et découvrir de nouvelles disciplines, ce qui l'a conduit à entreprendre diverses certifications pour évaluer ses connaissances dans des domaines variés. Parmi ces certifications, il a choisi de se lancer dans la certification <a href="https://secnumacademie.gouv.fr/">SecNumAcadémie</a> de l'Agence nationale de la sécurité des systèmes d'information (<a href="https://www.ssi.gouv.fr/">ANSSI</a>) pour acquérir des compétences en cybersécurité. Parallèlement, il a suivi plusieurs formations dans ce domaine, notamment celles proposées par OffSec.</p>
+                  <p>Au cours de sa première année d'études en Bachelor Universitaire de Technologie (BUT), Mattias a également pu passer la <a href="https://www.certificat-voltaire.fr/">Certification Voltaire</a> pour évaluer son niveau en orthographe française.</p>
                   
                   
                   <h3>
@@ -415,7 +413,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                     Mattias Uroz, s'est toujours intéressé à la communauté <a href="https://fr.wikipedia.org/wiki/Open_source">Open-Source</a>, il a passé beaucoup de temps à participer à des projets, afin d'observer leur progression.
                   </p>
                   <p>
-                    Passionné par l'informatique, il a acquis une maîtrise du langage <a href="https://fr.wikipedia.org/wiki/Python_(langage)">Python</a>, lui permettant d'aborder des problèmes complexes avec facilité. Il possède également des compétences intermédiaires dans l'utilisation des suites Office et <a href="https://fr.wikipedia.org/wiki/Adobe_(entreprise)">Adobe</a>, ce qui lui permet de travailler efficacement sur des tâches liées à la création de documents et à la manipulation d'éléments graphiques.
+                    Passionné d'informatique, il maîtrise le langage <a href="https://fr.wikipedia.org/wiki/Python_(langage)">Python</a>, lui permettant de résoudre des problèmes complexes avec facilité. Il possède également des compétences intermédiaires dans l'utilisation de la suite Office et d'<a href="https://fr.wikipedia.org/wiki/Adobe_(entreprise)">Adobe</a>, lui permettant de travailler efficacement sur des tâches liées à la création de documents et à la manipulation d'éléments graphiques.
                   </p>
                   <p>
                     En février 2022, Mattias fait la découverte d'<a href="https://www.openstreetmap.org/user/uMatt-5">OpenStreetMap</a>, ce qui marqua le début de son engagement actif et régulier dans la cartographie. Son implication grandissante le conduisit finalement à rejoindre l'association en août 2023. Cette expérience lui a offert l'opportunité d'acquérir des compétences approfondies en cartographie, tout en élargissant sa maîtrise de langages de programmation tels que <a href="https://fr.wikipedia.org/wiki/Java_(langage)">Java</a> et Python,
@@ -437,7 +435,8 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                       <div class="thumbcaption">Projet Sniffer Ethernet en colaboration avec <a href="https://fr.wikipedia.org/wiki/Thales_Alenia_Space">Thales Alenia Space</a></div>
                     </div>
                   </div>
-                  <p>Le <a href="https://github.com/uMatt/Thales-Sniffer">projet</a> Sniffer Ethernet de <a href="https://fr.wikipedia.org/wiki/Thales_Alenia_Space">Thales Alenia Space</a> visait à développer un programme <a href="https://fr.wikipedia.org/wiki/Python_(langage)">Python</a> capable de déchiffrer des fichiers de trame réseau binaires.Le but de ce programme est d'obtenir des données de trame importantes, telles que les données ARP, les <a href="https://fr.wikipedia.org/wiki/Adresse_IP">adresses IP</a> et MAC, pour les transférer à une base de données pour un traitement ultérieur. Les données réseau recueillies ont été analysées et utilisées de manière plus efficace et précise grâce à cette technique.</p>
+                  <p>Le <a href="https://github.com/uMatt/Thales-Sniffer">projet</a> Sniffer Ethernet de <a href="https://fr.wikipedia.org/wiki/Thales_Alenia_Space">Thales Alenia Space</a> visait à développer un programme <a href="https://fr.wikipedia.org/wiki/Python_(langage)">Python</a> capable de déchiffrer des fichiers de trame réseau binaires.Le but de ce programme est d'obtenir des données de trame importantes, telles que les données ARP, les <a href="https://fr.wikipedia.org/wiki/Adresse_IP">adresses IP</a> et MAC, 
+                    pour les transférer à une base de données pour un traitement ultérieur. Les données réseau recueillies ont été analysées et utilisées de manière plus efficace et précise grâce à cette technique.</p>
                   <p>Une fois que les données ont été extraites, elles sont transférées vers une base de données centralisée spécialement conçue pour le projet. Elle fournit une plateforme robuste et sécurisée pour le stockage, la gestion et l'analyse des données réseau. Il est plus facile d'organiser, de rechercher et d'utiliser efficacement les données pour des applications telles que la surveillance du réseau, l'optimisation des performances et la détection d'anomalies.</p>
                   <p>Un interface Web dédié permet de faciliter l'accès et la visualisation des données. De plus, elle offre des fonctionnalités pour supprimer les données indésirables ou obsolètes, garantissant la propreté et la pertinence des informations stockées.</p>
 
