--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                   <h3>
                     <span class="mw-headline" id="Experiences-Personnelles">Expériences Personnelles</span>
                   </h3>
-                  <p>Au cours de ses années universitaires, Mattias a exercé la fonction de président au sein du Bureau des Étudiants. Cette responsabilité lui a offert une précieuse occasion d'acquérir un ensemble de compétences inestimables, parmi lesquelles la gestion d'équipes et de projets, ainsi que l'organisation d'événements de grande ampleur. De plus, cette expérience lui a permis d'acquérir des compétences en gestion d'associations à but non lucratif.</p>
+                  <p>Au cours de ses années universitaires, Mattias a exercé la fonction de président au sein du <a href="http://bde-rt.fr/">Bureau des Étudiants</a>. Cette responsabilité lui a offert une précieuse occasion d'acquérir un ensemble de compétences inestimables, parmi lesquelles la gestion d'équipes et de projets, ainsi que l'organisation d'événements de grande ampleur. De plus, cette expérience lui a permis d'acquérir des compétences en gestion d'associations à but non lucratif.</p>
 
                   <h3>
                     <span class="mw-headline" id="Passions-Competences">Passions / Compétences</span>
