--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <title>Mattias Uroz — Wikipédia</title>
     <link rel="stylesheet" href="assets/load.css">
-    <link rel="stylesheet" href="assets/es.css">
-    <link rel="stylesheet" href="assets/es2.css">
     <meta name="viewport" content="width=1000">
     <meta property="og:title" content="Mattias Uroz — Wikipédia">
-    <meta property="og:type" content="website">
     <link rel="icon" href="assets/icon.ico">
   </head>
   <body class="skin-vector ltr sitedir-ltr mw-hide-empty-elt ns-0 ns-subject mw-editable skin-vector-2022 action-view vector-toc-not-collapsed vector-feature-language-in-header-enabled vector-feature-language-in-main-page-header-disabled vector-feature-language-alert-in-sidebar-enabled vector-feature-sticky-header-disabled vector-feature-sticky-header-edit-disabled vector-feature-table-of-contents-legacy-toc-disabled vector-feature-visual-enhancement-next-disabled vector-feature-article-tools-disabled">
@@ -215,9 +212,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                       </tr>
                       <tr>
                         <td colspan="2" style="text-align:center; line-height: 1.5em;">
-                          <a href=# class="image">
-                            <img alt="Illustration." src="assets/PhotoUM.jpg" decoding="async" srcset="assets/photoUM.jpg" data-file-width="455" data-file-height="581" width="220" height="281">
-                          </a>
+                          <img alt="Photo de Mattias" src="assets/PhotoUM.jpg" srcset="assets/photoUM.jpg" data-file-width="455" data-file-height="581" width="220" height="281">
                         </td>
                       </tr>
                       <tr>
