--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                       <div class="thumbcaption">Mise en situation de la création d'un réseau d'entreprise</a></div>
                     </div>
                   </div>
-                  <p>Le but du <a href="assets/SIMULATION_INFRA.pkt">projet</a> était de simuler un réseau commercial avec Cisco Packet Tracer. Trois VLANs ont été créées pour séparer les services, augmentant la sécurité et la confidentialité des données. Un pare-feu a été installé pour protéger le réseau des attaques externes et une <a href="https://fr.wikipedia.org/wiki/Zone_d%C3%A9militaris%C3%A9e_(informatique)">DMZ</a> a été installée pour héberger les services accessibles depuis Internet.</p>
+                  <p>Mattias a réalisé une <a href="assets/SIMULATION_INFRA.pkt">simulation d'un réseau commercial</a> avec Cisco Packet Tracer. Trois VLANs ont été créées pour séparer les services, augmentant la sécurité et la confidentialité des données. Un pare-feu a été installé pour protéger le réseau des attaques externes et une <a href="https://fr.wikipedia.org/wiki/Zone_d%C3%A9militaris%C3%A9e_(informatique)">DMZ</a> a été installée pour héberger les services accessibles depuis Internet.</p>
                   <p>Grâce à <a href="https://fr.wikipedia.org/wiki/Packet_Tracer">Cisco Packet Tracer</a>, une plateforme de simulation réseau, l'infrastructure a été conçue de manière pratique et réaliste. Les VLANs ont permis la segmentation du réseau en sous-réseaux virtuels, assurant l'isolation du trafic entre les départements. Le pare-feu a filtré le trafic réseau et appliqué des règles de sécurité pour prévenir les accès non autorisés et les attaques. La DMZ a fourni une zone intermédiaire pour les services accessibles depuis Internet, avec des règles de sécurité spécifiques.</p>
                   <p>En mettant l'accent sur la sécurité des systèmes d'information, ce projet lui a apporté des compétences en conception et configuration de réseaux d'entreprise. La simulation réussie a montré à quel point les VLANs, les pare-feu et les DMZ sont importants pour la protection et la séparation des réseaux d'une entreprise.</p>
 
@@ -457,7 +457,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                       <div class="thumbcaption">Projet AI4YOUTH en collaboration avec Intel</div>
                     </div>
                   </div>
-                  <p>Lors du programme AI4YOUTH organisé par Intel, il a eu l'opportunité de créer une idée novatrice centrée sur la problématique "Comment simplifier la vie quotidienne avec l'IA". Avec son équipe, 
+                  <p>Lors du programme AI4YOUTH organisé par Intel, Mattias Uroz a eu l'opportunité de créer une idée novatrice centrée sur la problématique "Comment simplifier la vie quotidienne avec l'IA". Avec son équipe, 
                     il a décidé de simplifier la vie des personnes sourdes et muettes, qui communiquent grâce à la langue des signes. Cependant, de nombreuses personnes ne comprennent pas cette langue, ce qui peut entraver la communication. </p>
                   <p>Pour résoudre ce problème, il a développé une intelligence artificielle qui traduit la langue des signes en toutes les langues. 
                     Pour cela, il a utilisé la bibliothèque OpenCV sur un script Python. La traduction s'effectue en temps réel via une caméra, rendant l'utilisation très simple.</p>
