--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ class="sidebar-toc-list-item sidebar-toc-level-2">
                   <h3>
                     <span class="mw-headline" id="Certifications">Certifications</span>
                   </h3>
-                  <p>Mattias a toujours aimé apprendre et découvrir de nouvelles disciplines, ce qui l'a conduit à entreprendre diverses certifications pour évaluer ses connaissances dans des domaines variés. Parmi ces certifications, il a choisi de se lancer dans la certification <a href="https://secnumacademie.gouv.fr/">SecNumAcadémie</a> de l'Agence nationale de la sécurité des systèmes d'information (<a href="https://www.ssi.gouv.fr/">ANSSI</a>) pour acquérir des compétences en cybersécurité. Parallèlement, il a suivi plusieurs formations dans ce domaine, notamment celles proposées par OffSec.</p>
+                  <p>Mattias a toujours aimé apprendre et découvrir de nouvelles disciplines, ce qui l'a conduit à entreprendre diverses certifications pour évaluer ses connaissances dans des domaines variés. Parmi ces certifications, il a choisi de se lancer dans la certification <a href="https://secnumacademie.gouv.fr/">SecNumAcadémie</a> de l'Agence nationale de la sécurité des systèmes d'information (<a href="https://cyber.gouv.fr/">ANSSI</a>) pour acquérir des compétences en cybersécurité. Parallèlement, il a suivi plusieurs formations dans ce domaine, notamment celles proposées par OffSec.</p>
                   <p>Au cours de sa première année d'études en Bachelor Universitaire de Technologie (BUT), Mattias a également pu passer la <a href="https://www.certificat-voltaire.fr/">Certification Voltaire</a> pour évaluer son niveau en orthographe française.</p>
                   
                   
